@@ -81,9 +81,11 @@
             class="enableUnloadProtection enableAutoFocus atBaseEditForm"
             action=""
             id=""
+            tal:define="enable_unload_protection enable_unload_protection|python:True;
+                        enable_auto_focus enable_auto_focus|python:True;"
             tal:attributes="action here/fgGetFormSubmitAction;
                             id string:fg-base-edit;
-                            class python:test(path('allow_tabbing|nothing'), 'enableUnloadProtection enableAutoFocus enableFormTabbing', 'enableUnloadProtection enableAutoFocus');">
+                            class python:test(enable_unload_protection, 'enableUnloadProtection', '') + test(enable_auto_focus, ' enableAutoFocus', '') + test(path('allow_tabbing|nothing'), 'enableFormTabbing', '');">
 
           <metal:block define-slot="extra_top" />
 
